# SOITraCS

./: .gitignore  README.md  main.py  pyproject.toml
config/: __init__.py  algorithms.yaml  colors.py  constants.py  settings.py
config/experiments/: ablation_study.yaml  new_algorithms_comparison.yaml  standard_comparison.yaml
config/scenarios/: grid_4x4.yaml
docs/: final_presentation.aux  final_presentation.bbl  final_presentation.bcf  final_presentation.blg  final_presentation.nav  final_presentation.run.xml  final_presentation.tex  final_report.aux  final_report.blg  final_report.out  final_report.tex  references.bib
plans/: IMPLEMENTATION_PLAN.md  SOITCS_Critical_Analysis.md  SOITraCS_Critical_Analysis.md
results/ablation/: ablation_table.tex  interaction_effects.csv  pairwise_comparisons.csv  raw_data.csv  subtractive_importance.csv  summary_statistics.csv
results/ablation_expanded/: additive_contributions.csv  pairwise_comparisons.csv  raw_data.csv  summary_statistics.csv
results/ablation_expanded_v2/: ablation_table.tex  interaction_effects.csv  pairwise_comparisons.csv  raw_data.csv  subtractive_importance.csv
results/ablation_final/: additive_contributions.csv  interaction_effects.csv  pairwise_comparisons.csv  raw_data.csv  subtractive_importance.csv  summary_statistics.csv
results/ablation_fix_test/: raw_data.csv  summary_statistics.csv
results/ablation_fix_test2/: summary_statistics.csv
scripts/: analyze_ablation.py  run_ablation.py  run_experiments.py  train_marl.py
src/: __init__.py
src/algorithms/: __init__.py  (+2 more)
tests/: __init__.py
(+74 files in other folders)
