[project]
name = "soitcs"
version = "0.1.0"
description = "Self-Organizing Intelligent Traffic Control Systems - Pygame visualization for Master's thesis"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.5.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
soitcs = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
